--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,6 +4,9 @@
  * work well for content-centric websites.
  */
 
+/* Import Tailwind CSS v4 */
+@import "tailwindcss";
+
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #2e8555;
