--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -117,8 +117,25 @@ body {
   @apply pl-6 mb-4 space-y-2;
 }
 
+.markdown ul {
+  list-style-type: disc;
+}
+
+.markdown ol {
+  list-style-type: decimal;
+}
+
 .markdown li {
   @apply list-item;
+  display: list-item;
+}
+
+.markdown ul ul {
+  list-style-type: circle;
+}
+
+.markdown ul ul ul {
+  list-style-type: square;
 }
 
 /* ============ Code Styling ============ */
